# village_sim

./: Cargo.toml  LICENSE.md  README.md
.github/: FUNDING.yml
.github/workflows/: rust-clippy.yml
data/: village.ldtk
src/: lib.rs  main.rs  mod.rs  prelude.rs  utils.rs
src/activities/: components.rs  mod.rs  prelude.rs  systems.rs
src/civilization/: mod.rs  prelude.rs
src/civilization/npc/: components.rs  mod.rs  prelude.rs
src/civilization/player/: components.rs  mod.rs  systems.rs
src/civilization/world/: components.rs  mod.rs  prelude.rs  resources.rs  systems.rs
src/cursor/: mod.rs
src/destinations/: components.rs  mod.rs  prelude.rs  systems.rs
src/dev_tools/: mod.rs  prelude.rs
src/dev_tools/benchmark/: mod.rs
src/dev_tools/debug_colliders/: mod.rs
src/dev_tools/npc_counting/: components.rs  prelude.rs  systems.rs
src/dev_tools/npc_tools/: components.rs  mod.rs  prelude.rs  systems.rs
src/dev_tools/seed_info/: mod.rs
src/dev_tools/time_manipulation/: mod.rs
src/dev_tools/weather_tools/: mod.rs
src/essentials/: mod.rs  prelude.rs
src/essentials/cursor/: mod.rs  prelude.rs
src/essentials/seed/: mod.rs  (+1 more)
src/headless_transform/: components.rs  mod.rs  systems.rs
src/map/: mod.rs  pathfinder.rs  prelude.rs
src/movement/: components.rs  mod.rs  prelude.rs  systems.rs
src/npc/: mod.rs  prelude.rs
src/physics/: components.rs  debug.rs  mod.rs  prelude.rs  systems.rs
src/safe_despawn/: mod.rs
src/utils/: mod.rs  prelude.rs  shapes.rs
src/world/: components.rs  map.rs  mod.rs  prelude.rs  resources.rs  systems.rs
(+23 files in other folders)
