[package]
name = "village_sim"
version = "0.1.0"
edition = "2021"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"

[dependencies]
bevy = "0.10.0"
bevy_prototype_debug_lines = "0.10.0"
ldtk_rust = "0.6.0"
lerp = "0.5.0"
pathfinding = "4.2.1"
rand = "0.8.5"
